Modify line-height and padding in dd. Fixes too much space between lines with multi-line park names.

--- a/src/style.css
+++ b/src/style.css
@@ -318,9 +318,9 @@ dl {
 
 dd {
     margin: 0 0 1em 0;
-    padding: 0;
+    padding: 0.5em 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    line-height: 2.2;
+    line-height: 1.5;
     font-weight: 400;
     color: #281900;
     background: #ede0eb; /* neutral 90 */
